Polish Gradle warning summary
These warnings are not just about deprecations, but will
include other kinds of warnings in the future. Calling them
Gradle warnings also makes it clear that we are not talking
about Java compiler warnings for instance.

Mentioning that this may break is redundant with what the
individual warnings are already saying and might actually
be wrong. E.g. if there is a single deprecation for Gradle
6.0, then saying "this may break in 5.0" is incorrect. It
also sounds scarier than it needs to be.

--- a/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
+++ b/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
@@ -420,7 +420,7 @@ Set to `verbose` to enable color and other rich output like the `rich`, but outp
 By default, Gradle won't display all warnings (e.g. deprecation warnings). Instead, Gradle will collect them and render a summary at the end of the build like:
 
 ----
-There are <number> deprecation warnings, which may break the build in Gradle 5.0. Please run with --warning-mode=all to see them.
+There were <number> Gradle warnings. Please run with --warning-mode=all to see them.
 ----
 
 You can control the verbosity of warnings on the console with the following options:
