--- a/subprojects/docs/src/docs/userguide/introductionDependencyManagement.adoc
+++ b/subprojects/docs/src/docs/userguide/introductionDependencyManagement.adoc
@@ -36,13 +36,13 @@ The example project builds Java source code. Some of the Java source files impor
 
 Guava and JUnit represent the _dependencies_ of this project. A build script developer can <<declaring_dependencies,declare dependencies>> for different scopes e.g. just for compilation of source code or for executing tests. In Gradle, the <<sub:scope_of_dependency_configurations,scope of a dependency>> is called a _configuration_. For a full overview, see the reference material on <<dependency_types,dependency types>>.
 
-Often times dependencies come in the form of one of many files. You’ll need to tell Gradle where to find those files so they can be consumed by the build. The location storing the files of a dependency is called a _repository_. By <<declaring_repositories,declaring repositories>> for a build, Gradle will know how to find and retrieve dependencies. Repositories can come in different forms: as local directory or a remote binary repository. The reference on <<repository_types,repository types>> provides a broad coverage on this topic.
+Often times dependencies come in the form of one or many files. You’ll need to tell Gradle where to find those files so they can be consumed by the build. The location storing the files of a dependency is called a _repository_. By <<declaring_repositories,declaring repositories>> for a build, Gradle will know how to find and retrieve dependencies. Repositories can come in different forms: as local directory or a remote binary repository. The reference on <<repository_types,repository types>> provides a broad coverage on this topic.
 
 At runtime, Gradle will locate the declared dependencies if needed for operating a specific task. The dependencies might need to be downloaded from a remote repository, retrieved from a local directory or requires another project to be built in a multi-project setting. This process is called _dependency resolution_. You can find a detailed discussion in <<sec:dependency_resolution>>.
 
 Once resolved, the resolution mechanism <<dependency_cache,stores the underlying files of a dependency in a local cache>>, also referred to as the _dependency cache_. Future builds reuse the files stored in the cache to avoid unnecessary network calls.
 
-Some dependencies provide additional metadata. Metadata is the data that describes the dependency in more detail e.g. the coordinates for finding it in a repository, information about the project or its authors. As part of the metadata, a dependency can define that other dependencies are needed at runtime for it to work properly. For example, the JUnit 5 platform dependency also requires the platform commons dependency. Gradle automatically resolves those additional dependencies, so called _transitive dependencies_. If needed you can <<managing_transitive_dependencies,customize the behavior the handling of transitive dependencies>> to your project's requirements.
+Some dependencies provide additional metadata. Metadata is the data that describes the dependency in more detail e.g. the coordinates for finding it in a repository, information about the project, or its authors. As part of the metadata, a dependency can define that other dependencies are needed at runtime for it to work properly. For example, the JUnit 5 platform dependency also requires the platform commons dependency. Gradle automatically resolves those additional dependencies, so called _transitive dependencies_. If needed, you can <<managing_transitive_dependencies,customize the behavior the handling of transitive dependencies>> to your project's requirements.
 
 Projects with tens or hundreds of declared dependencies can easily suffer from dependency hell. Gradle provides sufficient tooling to visualize, navigate and analyze the dependency graph of a project either with the help of a link:https://scans.gradle.com/get-started[build scan] or built-in tasks. Learn more in <<inspecting_dependencies>>.
 
