Use a more general term

--- a/subprojects/docs/src/docs/userguide/introductionDependencyManagement.adoc
+++ b/subprojects/docs/src/docs/userguide/introductionDependencyManagement.adoc
@@ -36,7 +36,7 @@ The example project builds Java source code. Some of the Java source files impor
 
 Guava and JUnit represent the _dependencies_ of this project. A build script developer can <<declaring_dependencies,declare dependencies>> for different scopes e.g. just for compilation of source code or for executing tests. In Gradle, the <<sub:scope_of_dependency_configurations,scope of a dependency>> is called a _configuration_. For a full overview, see the reference material on <<dependency_types,dependency types>>.
 
-Often times dependencies come in the form of one or many files. You’ll need to tell Gradle where to find those files so they can be consumed by the build. The location storing the files of a dependency is called a _repository_. By <<declaring_repositories,declaring repositories>> for a build, Gradle will know how to find and retrieve dependencies. Repositories can come in different forms: as local directory or a remote binary repository. The reference on <<repository_types,repository types>> provides a broad coverage on this topic.
+Often times dependencies come in the form of one or many files. You’ll need to tell Gradle where to find those files so they can be consumed by the build. The location storing the files of a dependency is called a _repository_. By <<declaring_repositories,declaring repositories>> for a build, Gradle will know how to find and retrieve dependencies. Repositories can come in different forms: as local directory or a remote repository. The reference on <<repository_types,repository types>> provides a broad coverage on this topic.
 
 At runtime, Gradle will locate the declared dependencies if needed for operating a specific task. The dependencies might need to be downloaded from a remote repository, retrieved from a local directory or requires another project to be built in a multi-project setting. This process is called _dependency resolution_. You can find a detailed discussion in <<sec:dependency_resolution>>.
 
